src/test/deca/etapeB/invalid/println_bad_args.deca
// Description:
//    Utilisation ud println
//
// Resultats:
//    Ligne 11 : mauvais argument numero 1
// 
// Historique:
//    cree le 01/01/2016

{
   println(1.5);
}
